# multi-agent-spec

./: .gitignore  404.html  CHANGELOG.json  CHANGELOG.md  ENHANCEMENT-content-blocks.md  ENHANCEMENT-evaluation-extensions.md  ENHANCEMENT-render-cli.md  Makefile  README.md  index.html  mkdocs.yml  sitemap.xml
cli/mas/: index.html
cmd/mas/: go.mod  go.sum  main.go
docs/: index.md
docs/cli/: mas.md
docs/examples/: stats-agent-team.md
docs/getting-started/: installation.md  quickstart.md
docs/releases/: v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.6.0.md  v0.7.0.md
docs/schemas/: agent.md  deployment.md  overview.md  report.md  team.md
docs/sdk/: go.md
examples/stats-agent-team/: deployment.json  index.html  team.json
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/github-pr-review/: index.html
releases/v0.1.0/: index.html
releases/v0.2.0/: index.html
releases/v0.3.0/: index.html
releases/v0.4.0/: index.html
releases/v0.5.0/: index.html
releases/v0.6.0/: index.html
releases/v0.7.0/: index.html
schema/agent/: agent.schema.json
schema/deployment/: deployment.schema.json
schema/message/: message.schema.json
schema/orchestration/: team.schema.json
schema/report/: agent-result.schema.json  llm-evaluation.schema.json  team-report.schema.json
schemas/agent/: index.html
schemas/deployment/: index.html
schemas/overview/: index.html
schemas/report/: index.html
schemas/team/: index.html
sdk/go/: CHANGELOG.json  CHANGELOG.md  agent.go  box.qtpl  box.qtpl.go  collaboration.go  collaboration_test.go  content_block.go  content_block_test.go  deployment.go  deployment_test.go  go.mod  go.sum  index.html  jsonschema.go  llm.go  loader.go  loader_test.go  message.go  message_test.go  narrative.go  narrative.qtpl  narrative.qtpl.go  narrative_test.go  renderer.go  report.go  report_test.go  team.go  (+1 more)
sdk/python/: pyproject.toml
search/: search_index.json
(+11 files in other folders)
